--- a/Sistema.Negocio/Sistema.Negocio.csproj
+++ b/Sistema.Negocio/Sistema.Negocio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="NArticulo.cs" />
     <Compile Include="NCategoria.cs" />
+    <Compile Include="NRol.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
