Agregagando cambios (CRUD) de Usuarios

--- a/Sistema.Datos/Sistema.Datos.csproj
+++ b/Sistema.Datos/Sistema.Datos.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DArticulo.cs" />
     <Compile Include="DCategoria.cs" />
     <Compile Include="DRol.cs" />
+    <Compile Include="DUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
