--- a/Sistema.Negocio/Sistema.Negocio.csproj
+++ b/Sistema.Negocio/Sistema.Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="NArticulo.cs" />
     <Compile Include="NCategoria.cs" />
     <Compile Include="NRol.cs" />
+    <Compile Include="NUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
